--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "es2015",
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
     "baseUrl": ".",
