update layout (ui and canvas); show assigned inputs and outputs on neuron and in the panel; fix dataset-related bugs; plots for data; make c-network-links work

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@lit-app/state": "^0.8.4",
     "@shoelace-style/shoelace": "^2.2.0",
     "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-vis": "^1.5.1",
     "@types/cytoscape": "^3.19.9",
     "@webwriter/create-widget": "^0.4.1",
     "@webwriter/lit": "latest",
