add keyboard shortcuts, fix positioning, additional input/output info, restrict outputs to one single, center layers, basic training

--- a/src/dataset/boston/config.json
+++ b/src/dataset/boston/config.json
@@ -55,11 +55,9 @@
             "description": "% lower status of the population"
         }
     ],
-    "outputs": [
-        {
-            "type": "regression",
-            "key": "MEDV",
-            "description": "Median value of owner-occupied homes in $1000s"
-        }
-    ]
+    "label": {
+        "type": "regression",
+        "key": "MEDV",
+        "description": "Median value of owner-occupied homes in $1000s"
+    }
 }
