--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "description": "Deep learning visualizer for WebWriter",
-  "main": "/dist/index.js",
+  "main": "/src/index.ts",
   "files": [
     "dist",
     "src"
