--- a/package.json
+++ b/package.json
@@ -19,27 +19,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lit-labs/context": "^0.3.3",
+    "@lit/context": "^1.1.2",
     "@shoelace-style/shoelace": "^2.6.0",
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-vis": "^1.5.1",
-    "@types/cytoscape": "^3.19.9",
-    "@webwriter/create-widget": "^0.4.1",
-    "@webwriter/lit": "^0.4.2",
-    "colorsea": "^1.2.1",
-    "cytoscape": "^3.23.0",
-    "lit": "^2.4.0"
+    "@types/cytoscape": "^3.21.6",
+    "@webwriter/create-widget": "^0.4.2",
+    "@webwriter/lit": "^2.0.0",
+    "colorsea": "^1.2.2",
+    "cytoscape": "^3.30.2",
+    "lit": "^3.2.0"
   },
   "devDependencies": {
-    "@types/wicg-file-system-access": "^2020.9.6",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.44.0",
-    "eslint-plugin-lit": "^1.8.3",
-    "eslint-plugin-wc": "^1.5.0",
-    "prettier": "^2.8.8",
-    "typescript": "^5.1.6",
-    "vite": "^3.1.6",
-    "vite-plugin-static-copy": "^0.13.1"
+    "@babel/plugin-proposal-decorators": "^7.24.7",
+    "@types/wicg-file-system-access": "^2023.10.5",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-lit": "^1.14.0",
+    "eslint-plugin-wc": "^2.1.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vite-plugin-static-copy": "^1.0.6"
   }
 }
